--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "dependencies": {
     "@nestjs/common": "^8.4.4",
     "@nestjs/config": "^2.0.0",
+    "@nestjs/cli": "^9.0.0",
+
     "@nestjs/core": "^8.4.4",
     "@nestjs/jwt": "^8.0.0",
     "@nestjs/microservices": "^8.4.4",
